--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "@supabase/supabase-js": "^2.39.7",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
